--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,31 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+
+  jobs:
+    build_n_deploy:
+      steps:
+        - checkout
+        - run:
+          name: "Run Hugo"
+          command: |
+            git submodule sync && git submodule update --init
+            git submodule foreach --recursive git pull origin master
+            HUGO_ENV=production hugo -v
+        - add_ssh_keys:
+          fingerprints:
+            = "07:1e:a5:48:a2:cc:c6:a6:ce:7f:a7:43:fa:8f:8d:25"
+      - run:
+          name: "Deploy to github.io"
+          command: |
+            cd ~/project/public
+            git config --global user.email "idiving2011@gmail.com"
+            git config --global user.name "idiving2011"
+            git add -A
+            git commit -m "Deploy from CircleCI"
+            git push origin HEAD:master
+
+    # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow "welcome"
   welcome:
