--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,22 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+global: &global
+  working_directory: ~/project
+  docker:
+    - image: cibuilds/hugo:0.69.1
 
-  jobs:
-    build_n_deploy:
-      steps:
-        - checkout
-        - run:
+jobs:
+  build_n_deploy:
+    <<: *global
+    steps:
+      - checkout
+      - run:
           name: "Run Hugo"
           command: |
             git submodule sync && git submodule update --init
             git submodule foreach --recursive git pull origin master
             HUGO_ENV=production hugo -v
-        - add_ssh_keys:
+      - add_ssh_keys:
           fingerprints:
             = "07:1e:a5:48:a2:cc:c6:a6:ce:7f:a7:43:fa:8f:8d:25"
       - run:
