--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,8 @@ jobs:
             git push origin HEAD:master
 
 workflows:
-  version: 2
-  build_n_deploy:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
     jobs:
-      - build_n_deploy:
-          filters:
-            branches:
-              only: master
+      - welcome/run
