--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,10 @@ jobs:
             git push origin HEAD:master
 
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  build_n_deploy:
     jobs:
-      - welcome/run
+      - build_n_deploy:
+          filters:
+            branches:
+              only: master
