--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ workflows:
   main:
     jobs:
       - hugo/build:
-          html-proofer: true
+          html-proofer: false
           version: '0.62'
