--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # default config
-baseurl = "https://examplesite.org"
+baseurl = "https://idiving2011.github.io/"
 languageCode = "en-us"
 title = "iDiving"
 theme = "parsa-hugo"
