新增 * 選單水費 自潛 課程超連結 * 自訂版本顯示

--- a/config.toml
+++ b/config.toml
@@ -223,6 +223,8 @@ contact_form_action = "#"
 google_analitycs_id = "Your ID"
 # copyright
 copyright = "Copyright &copy; 2020 a theme by [themefisher.com](themefisher.com)"
+# Version
+Version = "0.0.1"
 
 # Instagram feed
 [params.instafeed]
